# asherah-ffi

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_RULES.md  CHANGELOG.md  CLAUDE.md  CODEQL-FINDINGS.md  CONTRIBUTING.md  Cargo.toml  CsharpPlan.md  DEFECTS.md  NOTICE  PROJECT_DEFECT_SWEEP.md  PUBLISHED_CRATES.md  PUBLISHING.md  README.md  RELEASING.md  SECURITY.md  composer.json  csharp-ffi-cobhan-plan.md  lint_rules.toml  rust-toolchain.toml  valgrind.supp
.claude/: settings.local.json
.github/: dependabot.yml
asherah/: Cargo.toml  README.md
asherah-cobhan/: Cargo.toml  README.md
asherah-cobhan/interop/: README.md  generate_vectors.go  go.mod  run_interop_tests.sh
asherah-cobhan/src/: lib.rs
asherah-cobhan/tests/: canary_subprocess.rs  config_options_tests.rs  integration_tests.rs  interop_tests.rs  uninitialized_tests.rs
asherah-config/: Cargo.toml  README.md
asherah-config/src/: lib.rs
asherah-config/tests/: config_apply_env.rs
asherah-ffi/: Cargo.toml  README.md
asherah-ffi/src/: hooks.rs  lib.rs
asherah-ffi/tests/: error_sanitization.rs  hooks.rs
asherah-java/: .gitignore  Cargo.toml  README.md
asherah-java/docs/: aws-production-setup.md  framework-integration.md  getting-started.md  testing.md  troubleshooting.md
asherah-java/java/: pom.xml
asherah-java/java/src/main/java/com/godaddy/asherah/appencryption/: Session.java  SessionBytesImpl.java  SessionFactory.java  SessionJsonImpl.java
asherah-java/java/src/main/java/com/godaddy/asherah/crypto/: BasicExpiringCryptoPolicy.java  CryptoPolicy.java  NeverExpiredCryptoPolicy.java
asherah-java/java/src/main/java/com/godaddy/asherah/jni/: Asherah.java  AsherahConfig.java  AsherahFactory.java  AsherahLogHook.java  AsherahMetricsHook.java  AsherahMicrometer.java  AsherahNative.java  AsherahSession.java  AsherahSlf4j.java  JsonUtil.java  LogEvent.java  LogLevel.java  MetricsEvent.java  MetricsEventType.java  NativeLoader.java
asherah-java/java/src/test/java/com/godaddy/asherah/appencryption/: SessionFactoryCompatTest.java
asherah-java/java/src/test/java/com/godaddy/asherah/jni/: AsherahConfigTest.java  AsherahIntegrationTest.java  AsherahRotationTest.java  HookTests.java  JsonUtilTest.java  NativeLoaderTest.java
asherah-java/src/: lib.rs
asherah-java/tests/: jni.rs
asherah-node/: .gitignore  Cargo.toml  README.md  build.rs  create-universal-package.js  index.d.ts  package-lock.json  package.json
asherah-node/docs/: aws-production-setup.md  framework-integration.md  getting-started.md  testing.md  troubleshooting.md
asherah-node/npm/: index.js
asherah-node/npm/darwin-arm64/: package.json
asherah-node/npm/darwin-x64/: package.json
asherah-node/npm/linux-arm64-gnu/: package.json
asherah-node/npm/linux-arm64-musl/: package.json
asherah-node/npm/linux-x64-gnu/: package.json
asherah-node/npm/linux-x64-musl/: package.json
asherah-node/npm/win32-arm64-msvc/: package.json
asherah-node/npm/win32-x64-msvc/: package.json
asherah-node/scripts/: interop.js
asherah-node/src/: lib.rs
asherah-node/test/: bun-compat.js  e2e-aws.js  e2e-consumer.js  hooks.js  rotation.js  roundtrip.js  session-cache-bound.js
asherah-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
asherah-py/asherah/: __init__.py  _asherah.pyi
asherah-py/docs/: aws-production-setup.md  framework-integration.md  getting-started.md  testing.md  troubleshooting.md
asherah-py/src/: lib.rs
asherah-py/tests/: test_hooks.py  test_rotation.py  test_roundtrip.py  test_session_cache_bound.py
asherah-server/: Cargo.toml  Dockerfile  README.md  build.rs
asherah-server/docs/: grpc-client-compatibility.md
asherah-server/proto/: appencryption.proto
asherah-server/src/: convert.rs  lib.rs  main.rs  service.rs
asherah-server/tests/: e2e.rs  integration.rs  unit_tests.rs
asherah/cucumber/: README.md  docker-compose.yml
asherah/cucumber/js/: gen.js  package-lock.json  package.json
asherah/examples/: aws_kms.rs  dynamodb.rs  from_env.rs  mysql.rs  postgres.rs  simple.rs  sqlite.rs
asherah/features/: cross_language.feature  rotation_parity.feature
asherah/src/: aead.rs  api.rs  aws_sdk_load.rs  builders.rs  cache.rs  config.rs  config_drift_guard.rs  kms.rs  kms_aws.rs  kms_aws_envelope.rs  kms_builders.rs  kms_multi.rs  kms_secrets_manager.rs  kms_vault_transit.rs  lib.rs  limits.rs  logging.rs  memcall.rs  memguard.rs  metastore.rs  metastore_dynamodb.rs  metastore_mssql.rs  metastore_mysql.rs  metastore_postgres.rs  metastore_region.rs  metastore_sqlite.rs  metrics.rs  microarchitecture.rs  partition.rs  policy.rs  pool_mysql.rs  process_hardening.rs  session.rs  session_cache.rs  store.rs  traits.rs  types.rs
asherah/src/internal/: crypto_key.rs  mod.rs
asherah/tests/: aead_tests.rs  aes256gcm.rs  aes_negative.rs  api_and_config.rs  async_hook_dispatch.rs  async_metastore_trait.rs  async_rotation.rs  async_session.rs  basic.rs  builders_tests.rs  cache_concurrent.rs  cache_policies.rs  cache_tests.rs  cache_ttl.rs  concurrency.rs  concurrent_rotation.rs  config_env_tests.rs  config_tests.rs  cross_fixtures.rs  crypto_backend.rs  crypto_key_panic_guard.rs  crypto_key_tests.rs  cucumber.rs  decrypt_recovery.rs  encrypt_race_loss.rs  error_injection.rs  factory_from_env.rs  integration_containers.rs  json_shape.rs  kms_builder_unit_tests.rs  kms_integration.rs  kms_rotation.rs  kms_tests.rs  memcall_protection.rs  memguard.rs  memguard_tests.rs  metastore_contract.rs  metastore_mssql.rs  metastore_region_tests.rs  metastore_tests.rs  (+24 more)
benchmarks/asherah-bench/: Cargo.toml  README.md  build.rs
benchmarks/asherah-bench/benches/: cold_cache.rs  crypto_backend.rs  ffi.rs  hook_overhead.rs  mysql_metastore.rs  native.rs
benchmarks/native-bench/rust-bench/: Cargo.toml  contention.rs  main.rs  verify.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cobhan_buffer.rs  config_json.rs  data_row_record.rs  encrypt_decrypt.rs  mysql_dsn.rs  partition_key_ids.rs
interop-grpc/client/: Cargo.toml  Dockerfile  build.rs
interop-grpc/client/src/: main.rs
(+472 files in other folders)
