[package]
name = "asherah-cobhan"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "Cobhan-compatible C ABI for Asherah, drop-in replacement for the Go asherah-cobhan library."
homepage = "https://github.com/godaddy/asherah-ffi"
repository = "https://github.com/godaddy/asherah-ffi"
keywords = ["asherah", "ffi", "encryption", "kms", "cobhan"]
categories = ["cryptography", "memory-management", "ffi"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
test-helpers = []

[dependencies]
asherah = { path = "../asherah", features = ["sqlite", "mysql", "postgres", "dynamodb"] }
asherah-config = { path = "../asherah-config" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
asherah-cobhan = { path = ".", features = ["test-helpers"] }
serde = { version = "1.0", features = ["derive"] }

# Allow unsafe code (required for FFI)
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "uninitialized_tests"
path = "tests/uninitialized_tests.rs"

[[test]]
name = "config_options_tests"
path = "tests/config_options_tests.rs"
harness = false
