[package]
name = "asherah-config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared configuration parsing for Asherah bindings"
homepage = "https://github.com/awnumar/memcall"
repository = "https://github.com/awnumar/memcall"
documentation = "https://docs.rs/asherah-config"
readme = "README.md"
keywords = ["asherah", "configuration", "kms", "encryption"]
categories = ["config", "cryptography", "memory-management"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
asherah = { path = "../asherah" }

[lints]
workspace = true
