[package]
name = "asherah-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "C ABI for Asherah Rust library"
homepage = "https://github.com/godaddy/asherah-ffi"
repository = "https://github.com/godaddy/asherah-ffi"
readme = "README.md"
keywords = ["asherah", "ffi", "encryption", "kms"]
categories = ["cryptography", "memory-management", "ffi"]

[lib]
crate-type = ["cdylib"]

[dependencies]
asherah = { path = "../asherah", features = ["sqlite", "mysql", "postgres", "dynamodb"] }
asherah-cobhan = { path = "../asherah-cobhan" }
asherah-config = { path = "../asherah-config" }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"

[lints]
workspace = true
