[package]
name = "asherah-ffi"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "C ABI (Cobhan buffer format) for the Asherah encryption library, used by .NET, Ruby, and Go bindings."
homepage = "https://github.com/godaddy/asherah-ffi"
repository = "https://github.com/godaddy/asherah-ffi"
readme = "README.md"
keywords = ["asherah", "ffi", "encryption", "kms"]
categories = ["cryptography", "memory-management", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asherah = { version = "0.1.2", path = "../asherah", default-features = false, features = ["sqlite", "mysql", "postgres", "dynamodb"] }
asherah-cobhan = { version = "0.5.2", path = "../asherah-cobhan", default-features = false }
asherah-config = { version = "0.1.2", path = "../asherah-config", default-features = false }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
zeroize = { version = "1.8", features = ["alloc"] }

[features]
default = ["crypto-hardware-rust"]
crypto-hardware-rust = [
  "asherah/crypto-hardware-rust",
  "asherah-cobhan/crypto-hardware-rust",
  "asherah-config/crypto-hardware-rust",
]
crypto-ring = [
  "asherah/crypto-ring",
  "asherah-cobhan/crypto-ring",
  "asherah-config/crypto-ring",
]

[lints]
workspace = true
