[package]
name = "asherah-java"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "JNI bindings for the Asherah Rust library"
publish = false
homepage = "https://github.com/godaddy/asherah-ffi"
repository = "https://github.com/godaddy/asherah-ffi"
readme = "README.md"
keywords = ["asherah", "java", "jni", "encryption"]
categories = ["cryptography", "api-bindings"]

[lib]
name = "asherah_java"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = { version = "0.22", default-features = false, features = ["invocation"] }
asherah = { version = "0.1.1", path = "../asherah", features = ["sqlite", "mysql", "postgres", "dynamodb"] }
asherah-config = { version = "0.1.1", path = "../asherah-config" }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
log = "0.4"
parking_lot = "0.12"
zeroize = "1.8"

[dev-dependencies]
serial_test = "3.5"

[lints]
workspace = true
