[package]
name = "asherah-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js addon for Asherah (napi-rs)"
homepage = "https://github.com/awnumar/memcall"
repository = "https://github.com/awnumar/memcall"
documentation = "https://docs.rs/asherah-node"
readme = "README.md"
keywords = ["asherah", "node", "napi", "encryption"]
categories = ["cryptography", "api-bindings", "ffi"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
asherah = { path = "../asherah", features = ["sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"

[build-dependencies]
napi-build = "2"

[package.metadata.napi]
name = "asherah_node"
napi-version = 4
