[package]
name = "asherah-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Node.js addon for Asherah (napi-rs)"
publish = false
homepage = "https://github.com/godaddy/asherah-ffi"
repository = "https://github.com/godaddy/asherah-ffi"
readme = "README.md"
keywords = ["asherah", "node", "napi", "encryption"]
categories = ["cryptography", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
asherah = { version = "0.1.1", path = "../asherah", features = ["sqlite", "mysql", "postgres", "dynamodb"] }
asherah-config = { version = "0.1.1", path = "../asherah-config" }
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
parking_lot = "0.12"
lru = "0.16"
log = "0.4"

[build-dependencies]
napi-build = "2"

[package.metadata.napi]
name = "asherah"
napi-version = 4

[lints]
workspace = true
