[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "asherah"
version = "0.1.0"
description = "Python bindings for Asherah envelope encryption"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Asherah Maintainers" }
]
keywords = ["encryption", "envelope-encryption", "key-rotation", "security", "cryptography"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/godaddy/asherah-ffi"
Repository = "https://github.com/godaddy/asherah-ffi"

[tool.maturin]
bindings = "pyo3"
features = []
python-source = "."
module-name = "asherah._asherah"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
