[package]
name = "asherah-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "gRPC sidecar server for Asherah application-layer encryption, wire-compatible with the Go asherah server."
publish = false

[lib]
name = "asherah_server"
path = "src/lib.rs"

[[bin]]
name = "asherah-server"
path = "src/main.rs"

[dependencies]
asherah = { path = "../asherah", default-features = false }
asherah-config = { path = "../asherah-config", default-features = false }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rustix = { version = "1.1", features = ["fs", "process"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tower = "0.5"
hyper-util = "0.1"
serial_test = "3"
tempfile = "3"

[features]
default = ["crypto-hardware-rust", "mysql", "postgres", "dynamodb"]
crypto-hardware-rust = ["asherah/crypto-hardware-rust", "asherah-config/crypto-hardware-rust"]
crypto-ring = ["asherah/crypto-ring", "asherah-config/crypto-ring"]
mysql = ["asherah/mysql"]
postgres = ["asherah/postgres"]
dynamodb = ["asherah/dynamodb"]

[lints]
workspace = true
