[package]
name = "asherah"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Application-layer envelope encryption with automatic key rotation, secure memory, and pluggable metastore/KMS backends."
homepage = "https://github.com/godaddy/asherah-ffi"
repository = "https://github.com/godaddy/asherah-ffi"
readme = "README.md"
keywords = ["asherah", "encryption", "kms", "security", "secrets"]
categories = ["cryptography", "memory-management", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.9"
rand_chacha = "0.9"
itoa = "1"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
# aes-gcm kept as optional fallback; ring is default backend now
# aes-gcm = { version = "0.10", features = ["aes"] }
serde_bytes = "0.11"
blake2 = "0.10"
base64 = "0.22"
subtle = "2.5"
signal-hook = "0.4"
libc = "0.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory"] }
ring = "0.17"
scc = "2"
percent-encoding = "2"

[[bin]]
name = "asherah-interop"
path = "src/bin/interop.rs"

[features]
sqlite = ["dep:rusqlite"]
mysql = ["dep:mysql"]
postgres = ["dep:postgres", "dep:postgres-native-tls", "dep:native-tls", "dep:openssl"]
dynamodb = ["dep:aws-sdk-dynamodb"]
cucumber_xlang = []

[dependencies.rusqlite]
version = "0.38"
optional = true
features = ["bundled"]

[dependencies.aws-config]
version = "1"

[dependencies.aws-sdk-kms]
version = "1"

[dependencies.aws-sdk-dynamodb]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.mysql]
version = "27"
optional = true
features = ["native-tls"]


[dependencies.postgres]
version = "0.19"
optional = true
features = ["with-serde_json-1"]

[dependencies.postgres-native-tls]
version = "0.5"
optional = true

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.openssl]
version = "0.10"
optional = true
features = ["vendored"]

[dev-dependencies]
cucumber = "0.22"
futures = "0.3"
serde_json = "1.0"
which = "8"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "mysql", "localstack"] }

[[test]]
name = "integration_containers"
path = "tests/integration_containers.rs"
required-features = ["mysql", "postgres", "dynamodb"]

[[test]]
name = "sqlite_tests"
path = "tests/sqlite_tests.rs"
required-features = ["sqlite"]

[[test]]
name = "cucumber"
harness = false
required-features = ["cucumber_xlang"]

[lints]
workspace = true
