[package]
name = "asherah-bench"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = []

[dependencies]
anyhow = "1.0"
asherah = { path = "../../asherah" }
criterion = { version = "0.5", features = ["html_reports"] }
libloading = "0.8"
once_cell = "1.19"
rand = "0.9"
serde_json = "1"

[build-dependencies]
anyhow = "1.0"

[[bench]]
name = "ffi"
harness = false

[[bench]]
name = "native"
harness = false

[[bench]]
name = "cold_cache"
harness = false
