[package]
name = "asherah-bench"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = []

[features]
mysql = ["asherah/mysql", "dep:mysql", "dep:testcontainers", "dep:testcontainers-modules", "dep:tokio"]

[dependencies]
anyhow = "1.0"
asherah = { path = "../../asherah", features = ["mysql", "postgres"] }
criterion = { version = "0.5", features = ["html_reports"] }
libloading = "0.8"
mysql = { version = "25", optional = true }
once_cell = "1.19"
rand = "0.9"
serde_json = "1"
testcontainers = { version = "0.27", optional = true }
testcontainers-modules = { version = "0.15", features = ["mysql"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[build-dependencies]
anyhow = "1.0"

[[bench]]
name = "ffi"
harness = false

[[bench]]
name = "native"
harness = false

[[bench]]
name = "cold_cache"
harness = false

[[bench]]
name = "mysql_metastore"
harness = false
required-features = ["mysql"]
