[package]
name = "asherah-bench"
version = "0.1.0"
edition = "2021"
publish = false

# Note: workspace lints are intentionally NOT inherited here.
# Benchmark code legitimately uses unsafe, unwrap, panic, eprintln, etc.

[features]
mysql = ["asherah/mysql", "dep:mysql", "dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
anyhow = "1.0"
asherah = { path = "../../asherah", features = ["mysql", "postgres"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
libloading = "0.8"
log = "0.4"
mysql = { version = "27", optional = true, features = ["native-tls"] }
once_cell = "1.19"
rand = "0.9"
serde_json = "1"
testcontainers = { version = "0.27", optional = true }
testcontainers-modules = { version = "0.15", features = ["mysql"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
anyhow = "1.0"

[[bench]]
name = "ffi"
harness = false

[[bench]]
name = "native"
harness = false

[[bench]]
name = "hook_overhead"
harness = false

[[bench]]
name = "cold_cache"
harness = false

[[bench]]
name = "mysql_metastore"
harness = false
required-features = ["mysql"]
