[workspace]

[package]
name = "asherah-server-interop-client"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "interop-client"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
hyper-util = "0.1"
tower = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-prost-build = "0.14"
